# hpge_dsp

./: pyproject.toml
hpge_det/: funcs.py  funcs.py~  funcs_worked_with_gen.py  funcs_worked_with_gen.py~  histo_EN.txt  histo_EN_CR_RC.txt  histo_EN_integral.txt  histo_EN_trap.txt  histo_calc.py  histo_calc.py~  model_signal.py  pip_freeze.txt  useful_commands.txt
tests/: test_hpge_det.py
